--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run start",
+    "start" : "node src/server.js",
     "devStart" : "nodemon src/server.js"
   },
   "repository": {
